[gd_scene load_steps=19 format=2]

[ext_resource path="res://UI/SpellBook/SpellBookUI.gd" type="Script" id=1]
[ext_resource path="res://PixelArt/UI/SpellBook/spellbook_ui.png" type="Texture" id=2]
[ext_resource path="res://PixelArt/MagicElements/base_empty.png" type="Texture" id=3]
[ext_resource path="res://PixelArt/MagicElements/Fire.png" type="Texture" id=4]
[ext_resource path="res://PixelArt/MagicElements/Thunder.png" type="Texture" id=5]
[ext_resource path="res://PixelArt/MagicElements/Wind.png" type="Texture" id=6]
[ext_resource path="res://PixelArt/MagicElements/Water.png" type="Texture" id=7]
[ext_resource path="res://PixelArt/MagicElements/Earth.png" type="Texture" id=8]
[ext_resource path="res://PixelArt/MagicElements/Light.png" type="Texture" id=9]
[ext_resource path="res://PixelArt/MagicElements/Grass.png" type="Texture" id=10]
[ext_resource path="res://PixelArt/MagicElements/Psychic.png" type="Texture" id=11]
[ext_resource path="res://PixelArt/MagicElements/Shadow.png" type="Texture" id=12]
[ext_resource path="res://PixelArt/MagicElements/base.png" type="Texture" id=13]
[ext_resource path="res://Others/Fonts/AncientModernTales-a7Po.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Animations/MenusAnimator/show_selected_spell.tres" type="Animation" id=15]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
extra_spacing_top = -3
extra_spacing_bottom = -3
extra_spacing_char = 2
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=3]
size = 10
outline_size = 1
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 14 )

[node name="SpellBookUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spells" type="Control" parent="."]
anchor_left = 0.113
anchor_top = 0.15
anchor_right = 0.437
anchor_bottom = 0.85
margin_left = -0.184006
margin_right = -0.216003
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="TextureRect" parent="Spells"]
anchor_left = -0.016
anchor_right = 0.332
anchor_bottom = 0.286
margin_left = -0.0559998
margin_right = -0.0880051
margin_bottom = -0.064003
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureButton" parent="Spells/Fire"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 4 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="TextureRect" parent="Spells"]
anchor_left = 0.332
anchor_right = 0.679
anchor_bottom = 0.286
margin_left = -0.0880051
margin_right = 0.0639954
margin_bottom = -0.064003
texture = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="Spells/Water"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 7 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass" type="TextureRect" parent="Spells"]
anchor_left = 0.679
anchor_right = 1.027
anchor_bottom = 0.286
margin_left = 0.0639954
margin_right = 0.0319824
margin_bottom = -0.064003
texture = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="Spells/Grass"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 10 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earth" type="TextureRect" parent="Spells"]
anchor_left = -0.016
anchor_top = 0.321
anchor_right = 0.332
anchor_bottom = 0.607
margin_left = -0.0559998
margin_top = 0.0960007
margin_right = -0.0880051
margin_bottom = 0.0319824
texture = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="Spells/Earth"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thunder" type="TextureRect" parent="Spells"]
anchor_left = 0.332
anchor_top = 0.321
anchor_right = 0.679
anchor_bottom = 0.607
margin_left = -0.0880051
margin_top = 0.0960007
margin_right = 0.0639954
margin_bottom = 0.0319824
texture = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="Spells/Thunder"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 5 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wind" type="TextureRect" parent="Spells"]
anchor_left = 0.679
anchor_top = 0.321
anchor_right = 1.027
anchor_bottom = 0.607
margin_left = 0.0639954
margin_top = 0.0960007
margin_right = 0.0319824
margin_bottom = 0.0319824
texture = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="Spells/Wind"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 6 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light" type="TextureRect" parent="Spells"]
anchor_left = -0.016
anchor_top = 0.643
anchor_right = 0.332
anchor_bottom = 0.929
margin_left = -0.0559998
margin_top = -0.0319977
margin_right = -0.0880051
margin_bottom = -0.0960083
texture = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="Spells/Light"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 9 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Psychic" type="TextureRect" parent="Spells"]
anchor_left = 0.332
anchor_top = 0.643
anchor_right = 0.679
anchor_bottom = 0.929
margin_left = -0.0880051
margin_top = -0.0319977
margin_right = 0.0639954
margin_bottom = -0.0960083
texture = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="Spells/Psychic"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 11 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="TextureRect" parent="Spells"]
anchor_left = 0.679
anchor_top = 0.643
anchor_right = 1.027
anchor_bottom = 0.929
margin_left = 0.0639954
margin_top = -0.0319977
margin_right = 0.0319824
margin_bottom = -0.0960083
texture = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="Spells/Shadow"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 12 )
texture_disabled = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedSpell" type="Control" parent="."]
visible = false
anchor_left = 0.563
anchor_top = 0.2
anchor_right = 0.887
anchor_bottom = 0.85
margin_left = 0.215973
margin_right = 0.18399
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellBase" type="TextureRect" parent="SelectedSpell"]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellImg" type="TextureRect" parent="SelectedSpell"]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellName" type="Label" parent="SelectedSpell"]
margin_left = 80.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.533333, 0.376471, 0.192157, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellDescription" type="Label" parent="SelectedSpell"]
margin_left = 24.0
margin_top = 104.0
margin_right = 168.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0.533333, 0.376471, 0.192157, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_selected_spell = ExtResource( 15 )

[connection signal="pressed" from="Spells/Fire/Icon" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="Spells/Water/Icon" to="." method="_on_water_pressed"]
[connection signal="pressed" from="Spells/Grass/Icon" to="." method="_on_grass_pressed"]
[connection signal="pressed" from="Spells/Earth/Icon" to="." method="_on_earth_pressed"]
[connection signal="pressed" from="Spells/Thunder/Icon" to="." method="_on_thunder_pressed"]
[connection signal="pressed" from="Spells/Wind/Icon" to="." method="_on_wind_pressed"]
[connection signal="pressed" from="Spells/Light/Icon" to="." method="_on_light_pressed"]
[connection signal="pressed" from="Spells/Psychic/Icon" to="." method="_on_psychic_pressed"]
[connection signal="pressed" from="Spells/Shadow/Icon" to="." method="_on_shadow_pressed"]
